src/objects/FTE_Data_Record__c.object
<CustomObject>
    <label>FTE Data Record</label>
    <nameField>
        <displayFormat>FTE_Data-{0000000000}</displayFormat>
        <label>FTE_Data_Upload Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>FTE Data Records</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <fields>
        <fullName>Contract__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contract</label>
        <referenceTo>DContract__c</referenceTo>
        <relationshipLabel>FTE Data Records</relationshipLabel>
        <relationshipName>FTE_Data_Records</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Employee__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Employee</label>
        <referenceTo>SFDC_Employee__c</referenceTo>
        <relationshipLabel>FTE Data Records</relationshipLabel>
        <relationshipName>FTE_Data_Records</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Line_Number__c</fullName>
        <label>Line Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Message__c</fullName>
        <label>Message</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Month_10__c</fullName>
        <label>October</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Month_11__c</fullName>
        <label>November</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Month_12__c</fullName>
        <label>December</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Processed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Processed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Year_Text__c</fullName>
        <formula>TEXT(Year__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Year Text</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Year__c</fullName>
        <label>Year</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
</CustomObject>